--- a/assets/discount-product.css
+++ b/assets/discount-product.css
@@ -135,6 +135,8 @@
     min-height: 79px;
     background: linear-gradient(180deg, #FA7226 0%, #DA2127 100%);
     border-radius: 4px;
+    font-size: 40px;
+    text-align: center;
 }
 
 .discount-row .discount-timer-label {
