--- a/sections/discounted-product.liquid
+++ b/sections/discounted-product.liquid
@@ -69,22 +69,6 @@
           "id": "btn_text",
           "label": "Button Text"
         },
-
-        {
-          "type": "header",
-          "content": "Discount Timer"
-        },
-        {
-          "type": "text",
-          "id": "timer_message",
-          "label": "Timer Message"
-        },
-        {
-          "type": "html",
-          "id": "timer_percent_off",
-          "label": "Timer Percent Off"
-        },
-
         {
         "type": "header",
         "content": "Countdown Banner"
@@ -179,7 +163,7 @@
       {
         "type": "textarea",
         "id": "countdown_default_text",
-        "default": "Hurry up to get this Discount <span class='custom-time' ><\/span> ",
+        "default": "Hurry up to get this Discount",
         "label": "Countdown Default Text"
       },
       {
@@ -189,6 +173,12 @@
         "label": "Countdown End Text"
       },
 
+      {
+          "type": "html",
+          "id": "countdown_timer_percent_off",
+          "default":"Get <span class='h2'>20%</span> off",
+          "label": "Countdown Timer Percent Off"
+        },
         {
           "type": "header",
           "content": "Color Scheme"
