--- a/assets/discount-product.css
+++ b/assets/discount-product.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: 'Inter';
-    src: url('font/Inter.ttf');
+    src: url('https://cdn.shopify.com/s/files/1/0652/8932/2726/files/Inter.ttf?v=1708397693');
 }
 
 @font-face {
     font-family: 'Inder';
-    src: url('font/Inder.ttf');
+    src: url('https://cdn.shopify.com/s/files/1/0652/8932/2726/files/Inder.ttf?v=1708397692');
 }
 
 .discount-section-wrapper {
