--- a/snippets/discount-product.liquid
+++ b/snippets/discount-product.liquid
@@ -1,5 +1,5 @@
+{%- if section.settings.enable_discount_product -%}
 {%- liquid
-  assign enable_discount_product = section.settings.enable_discount_product
   assign title = section.settings.title
   assign description = section.settings.description
   assign discount_product = section.settings.product
@@ -31,8 +31,61 @@
   assign dots_img = section.settings.dots_img
   assign bg_sping_img = section.settings.bg_sping_img
 -%}
+{%- style -%}
 
-<div class="discount-section-wrapper">
+    .discount-section-inner {
+        background: linear-gradient(180deg, {{ bg_color_1 }} 0%, {{ bg_color_2 }} 100%);
+    }
+    .discount-section-inner::before {
+       content: '';
+       background: url('{{ circle_img |  image_url: 'master'  }}') left top no-repeat,
+           url('{{ dots_img |  image_url: 'master'  }}') left bottom no-repeat,
+           url('{{ bg_sping_img |  image_url: 'master'  }}') right bottom no-repeat;
+       position: absolute;
+       top: 0;
+       left: 0;
+       width: 100%;
+       height: 100%;
+   }
+    .discount-row p,
+    .discount-row h2,
+    .discount-row h3,
+    .discount-row .discount-pro-vendor,
+    .discount-row .discount-pro-category {
+        color: {{ text_color }};
+    }
+
+    .discount-row .discount-pro-atc-btn {
+    background: linear-gradient(180deg, {{ bg_button_color_1  }} 0%, {{ bg_button_color_2  }} 100%);
+    }
+    .discount-row .discount-pro-atc span {
+     color: {{ button_text_color  }};
+    }
+
+    .discount-row .discount-timer-percent-box {
+        background:{{ percent_off_bg_color }};
+        color: {{ percent_off_text_color }};
+    }
+    .discount-row .discount-timer-percent-box span {
+    color: {{ percent_off_text_color }};
+    }
+    .discount-row .discount-timer-time {
+    background: linear-gradient(180deg, {{ bg_timer_color_1 }} 0%, {{ bg_timer_color_2 }} 100%);
+    }
+    #clockdiv {
+    color: {{ timer_text_color }};
+    }
+    #clockdiv div>span {
+        color: {{ timer_text_color }};
+    }
+    #saleActive,
+    #saleEnded {
+        color: {{ timer_text_color }};
+    }
+
+ {%- endstyle -%} 
+  
+<div class="discount-section-wrapper" id="discount-section-{{ section.id }}">
   <div class="discount-section-inner">
     <div class="discount-row">
       <div class="discount-col discount-col-head">
@@ -163,3 +216,4 @@
 }
 cdtd();
 </script>
+{%- endif -%}
