Image link fixed

--- a/snippets/discount-product.liquid
+++ b/snippets/discount-product.liquid
@@ -38,9 +38,9 @@
     }
     .discount-section-inner::before {
        content: '';
-       background: url('{{ circle_img |  image_url: 'master'  }}') left top no-repeat,
-           url('{{ dots_img |  image_url: 'master'  }}') left bottom no-repeat,
-           url('{{ bg_sping_img |  image_url: 'master'  }}') right bottom no-repeat;
+       background: url('{{ circle_img |  img_url: 'master'  }}') left top no-repeat,
+           url('{{ dots_img |  img_url: 'master'  }}') left bottom no-repeat,
+           url('{{ bg_sping_img |  img_url: 'master'  }}') right bottom no-repeat;
        position: absolute;
        top: 0;
        left: 0;
