--- a/snippets/discount-product.liquid
+++ b/snippets/discount-product.liquid
@@ -146,15 +146,19 @@
           <div class="discount-timer-time">
             <div id="clockdiv">
               <div>
+                <div class="smalltext">DAYS</div>
                 <span id="daysBox"></span>
               </div>
               <div>
+                <div class="smalltext">HR</div>
                 <span id="hoursBox"></span>
               </div>
               <div>
+                <div class="smalltext">MIN</div>
                 <span id="minsBox"></span>
               </div>
               <div>
+                <div class="smalltext">SEC</div>
                 <span id="secsBox"></span>
               </div>
             </div>
