--- a/assets/discount-product.css
+++ b/assets/discount-product.css
@@ -169,6 +169,7 @@
 
 .discount-timer-label h3 {
     margin-bottom: 2px;
+    font-weight: 700;
 }
 
 .discount-timer-time p {
@@ -184,7 +185,6 @@
     color: #fff;
     display: inline-block;
     text-align: center;
-    margin: 0 5px 5px;
 }
 
 #clockdiv>div {
@@ -213,6 +213,10 @@
 }
 .smalltext {
     font-size: 16px;
+    margin-bottom: -20px;
+    justify-content: center;
+    padding-right: 10px;
+    margin-top: 5px;
 }
 #saleEnded {
     display: none;
