--- a/snippets/discount-product.liquid
+++ b/snippets/discount-product.liquid
@@ -172,7 +172,7 @@
         {%- endif -%}  
         {%- if countdown_timer_percent_off != blank -%}
           <div class="discount-timer-percent" id="percentOff">
-            <div class="discount-timer-percent-box">Get <span class="h2">20%</span> off</div>
+            <div class="discount-timer-percent-box">{{ countdown_timer_percent_off }}</div>
           </div>
         {%- endif -%}  
         </div>
