--- a/sections/discounted-product.liquid
+++ b/sections/discounted-product.liquid
@@ -176,7 +176,7 @@
       {
           "type": "html",
           "id": "countdown_timer_percent_off",
-          "default":"Get <span class='h2'>20%</span> off",
+          "default":"Get <span class='h2'><strong>20</strong>%</span> off",
           "label": "Countdown Timer Percent Off"
         },
         {
