--- a/assets/discount-product.css
+++ b/assets/discount-product.css
@@ -151,7 +151,7 @@
     font-family: Inter;
     font-size: 20px;
     font-weight: 700;
-    line-height: 55px;
+    padding-top: 3px;
     letter-spacing: 0em;
     text-align: center;
     background: #EF5726;
