--- a/snippets/discount-product.liquid
+++ b/snippets/discount-product.liquid
@@ -131,7 +131,7 @@
           {%- endif -%}
           {%- if btn_text != blank -%}
             <div class="discount-pro-atc">
-              <button class="discount-pro-atc-btn" data-var-id="{{ discount_product.first_available_variant.id }}">
+              <button type="button" class="discount-pro-atc-btn" data-var-id="{{ discount_product.first_available_variant.id }}">
                 <span>{{ btn_text }}</span>
               </button>
             </div>
