--- a/assets/discount-product.js.liquid
+++ b/assets/discount-product.js.liquid
@@ -25,8 +25,8 @@ function addItemToCart(variant_id, qty) {
     }));
   }
 
- var addButton = document.querySelector('.discount-pro-atc-btn');
-	addButton.addEventListener('click', function() {
-		var productId = addButton.getAttribute('data-var-id');
-		addItemToCart(productId, 1);
-	});
+//  var addButton = document.querySelector('.discount-pro-atc-btn');
+// 	addButton.addEventListener('click', function() {
+// 		var productId = addButton.getAttribute('data-var-id');
+// 		addItemToCart(productId, 1);
+// 	});
