--- a/assets/discount-product.js.liquid
+++ b/assets/discount-product.js.liquid
@@ -1,32 +1,37 @@
+document.addEventListener('DOMContentLoaded', function() {
+  var addButton = document.querySelector('.discount-pro-atc-btn');
+
+  if (addButton) {
+    addButton.addEventListener('click', function() {
+      var productId = addButton.getAttribute('data-var-id');
+      addItemToCart(productId, 1);
+    });
+  }
+});
+
 function addItemToCart(variant_id, qty) {
-    var data = {
-      "id": variant_id,
-      "quantity": qty
-    };
+  var data = {
+    "id": variant_id,
+    "quantity": qty
+  };
 
-    fetch('/cart/add.js', {
-      method: 'POST',
-      headers: {
-        'Content-Type': 'application/json'
-      },
-      body: JSON.stringify(data)
-    })
-    .then(response => response.json())
-    .then(() => {
-      alert('Product Added in your cart');
-      document.documentElement.dispatchEvent(new CustomEvent('cart:refresh', {
-        bubbles: true
-      }));
-    })
-    .catch(error => console.error('Error:', error));
-
+  fetch('/cart/add.js', {
+    method: 'POST',
+    headers: {
+      'Content-Type': 'application/json'
+    },
+    body: JSON.stringify(data)
+  })
+  .then(response => response.json())
+  .then(() => {
+    alert('Product Added in your cart');
     document.documentElement.dispatchEvent(new CustomEvent('cart:refresh', {
       bubbles: true
     }));
-  }
+  })
+  .catch(error => console.error('Error:', error));
 
-//  var addButton = document.querySelector('.discount-pro-atc-btn');
-// 	addButton.addEventListener('click', function() {
-// 		var productId = addButton.getAttribute('data-var-id');
-// 		addItemToCart(productId, 1);
-// 	});
+  document.documentElement.dispatchEvent(new CustomEvent('cart:refresh', {
+    bubbles: true
+  }));
+}
