--- a/snippets/discount-product.liquid
+++ b/snippets/discount-product.liquid
@@ -180,7 +180,7 @@
     </div>
   </div>
 </div>
-
+<script src="{{ 'discount-product.js' | asset_url }}" defer="defer"></script>
 <script>
     function cdtd() {
 	var xmas = new Date("{{ countdown_end_month }} {{ countdown_end_date }}, {{countdown_end_year}} {{ countdown_end_time }}");
