--- a/snippets/discount-product.liquid
+++ b/snippets/discount-product.liquid
@@ -192,6 +192,7 @@
 		        document.querySelector("#clockdiv").style.display="none";
 				document.querySelector("#saleActive").style.display="none";
                 document.querySelector("#percentOff").style.display="none";
+                document.querySelector(".discount-section-wrapper").style.display="none";
                {% if countdown_sale_end_text != blank %}
 				document.querySelector("#saleEnded").style.display="block";			
                {% endif %}
